--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run nearley:compile && node index.js",
+    "start": "node index.js",
+    "dev": "chokidar \"grammar.ne\" -c \"npm run nearley\"",
+    "test": "npm run nearley:test",
+    "nearley": "run-s nearley:*",
     "nearley:compile": "nearleyc grammar.ne --out grammar.js",
+    "nearley:test": "ava grammar.test.js",
     "nearley:railroad": "nearley-railroad grammar.ne --out railroad.html"
   },
   "repository": {
@@ -19,9 +23,12 @@
   },
   "homepage": "https://github.com/jurgenbelien/parser-example#readme",
   "devDependencies": {
-    "nearley": "^2.19.7"
+    "chokidar-cli": "^2.1.0",
+    "nearley": "^2.19.7",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "ava": "^3.15.0",
     "moo": "^0.5.1"
   }
 }
